<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_follow_path</name>
  <version>1.0.4</version>
  <description>Provide the ros interfaces</description>
  <maintainer email="quic_xiaowz@quicinc.com">xiaowz</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <author email="quic_xiaowz@quicinc.com">xiaowz</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>rcutils</depend>
  <depend>tf2</depend>
  <depend>nav_2d_msgs</depend>
  <depend>eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>qrb_ros_amr_msgs</depend>
  <depend>qrb_ros_navigation_msgs</depend>
  <depend>qrb_ros_robot_base_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tinyxml2</depend>
  <depend>qrb_follow_path_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
